Implementated jwt authentication
